force-app/main/default/objects/Program__c/fields/Administering_Agency__c.field-meta.xml
<CustomField>
    <fullName>Administering_Agency__c</fullName>
    <label>Administering Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>