force-app/main/default/objects/Program__c/fields/Typical_Referral_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Typical_Referral_Lead_Time_Days__c</fullName>
    <label>Typical Referral Lead Time (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>