force-app/main/default/objects/Program__c/listViews/All_Programs.listView-meta.xml
<ListView>
    <fullName>All_Programs</fullName>
    <columns>NAME</columns>
    <columns>Administering_Agency__c</columns>
    <columns>Eligibility_Summary__c</columns>
    <columns>Typical_Referral_Lead_Time_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Programs</label>
</ListView>